Front management, gestion des contextes
